--- a/server/package.json
+++ b/server/package.json
@@ -9,10 +9,12 @@
 	"author": "Misael Esperanzate",
 	"license": "ISC",
 	"dependencies": {
-		"body-parser": "^1.19.0",
+		"axios": "^0.24.0",
+		"cloudinary": "^1.27.1",
 		"cors": "^2.8.5",
 		"dotenv": "^10.0.0",
-		"express": "^4.17.1"
+		"express": "^4.17.1",
+		"multer": "^1.4.3"
 	},
 	"devDependencies": {
 		"eslint": "^8.3.0",
