--- a/server/package.json
+++ b/server/package.json
@@ -13,8 +13,7 @@
 		"cloudinary": "^1.27.1",
 		"cors": "^2.8.5",
 		"dotenv": "^10.0.0",
-		"express": "^4.17.1",
-		"multer": "^1.4.3"
+		"express": "^4.17.1"
 	},
 	"devDependencies": {
 		"eslint": "^8.3.0",
