--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,11 @@
 		"dotenv": "^10.0.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-icons": "^4.3.1",
 		"react-photo-gallery": "^8.0.0",
 		"react-router-dom": "^6.0.2",
-		"react-scripts": "4.0.3"
+		"react-scripts": "4.0.3",
+		"sass": "^1.43.4"
 	},
 	"scripts": {
 		"start": "react-scripts start",
@@ -22,6 +24,7 @@
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
 	},
+	"proxy": "http://localhost:8000",
 	"eslintConfig": {
 		"extends": [
 			"react-app",
