--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
 		"dotenv": "^10.0.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-images": "^1.2.0-beta.7",
+		"react-infinite-scroll-component": "^6.1.0",
 		"react-photo-gallery": "^8.0.0",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
